--- a/src/road/road.css
+++ b/src/road/road.css
@@ -1,6 +1,6 @@
 :root {
-    --grid-width: 17; /* 15 */
-    --grid-height: 1; /* 25 */
+    --grid-width: 9; /* 15 */
+    --grid-height: 2; /* 25 */
     --tile-width: 64px;
     --tile-height: 64px;
 
@@ -19,20 +19,21 @@
 }
 
 .grid-tile {
+    position: relative;
     color: #ff0000;
     background-color: #00ff00;
     text-align: center;
     vertical-align: middle;
 }
 
+/* TODO needs work on layering */
 .road-tile-descriptor {
-    color: #000000;
-    float: left;
+    color: #ff0000;
 }
 
 .road-tile {
     background-color: #000000;
-    position: relative;
+    position: absolute;
     top: 0px;
     left: 0px;
     width: var(--tile-width);
