--- a/src/road/Grid.css
+++ b/src/road/Grid.css
@@ -8,8 +8,7 @@
 
 .grid-tile {
     position: relative;
-    color: #ff0000;
-    background-color: #00ff00;
+    background-color: white;
     text-align: center;
     vertical-align: middle;
 }
