--- a/src/road/Vehicle.css
+++ b/src/road/Vehicle.css
@@ -1,6 +1,7 @@
 .vehicle {
     height: 7px;
     width: 7px;
+    margin: -4px -4px;
     background-color: #00ff00;
     border-radius: 50%;
     position: absolute;
